--- a/css-activityPage/activity.original.css
+++ b/css-activityPage/activity.original.css
@@ -39,7 +39,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 @media (max-width: 1024px) {
   .l-header__subpage {
-    width: 520px;
+    width: 600px;
   }
 }
 @media (max-width: 750px) {
@@ -348,6 +348,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .activity_item {
   display: flex;
+  align-items: flex-start;
   position: relative;
   margin-bottom: 7%;
 }
@@ -364,6 +365,7 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 400px;
   background-color: #8b8f8f;
   border: black solid 0.2vw;
+  position: absolute;
   z-index: 10;
 }
 @media (max-width: 750px) {
@@ -391,56 +393,86 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0 auto;
 }
 .activity_item .activity_itemContent {
-  width: 60%;
+  width: 51%;
   height: auto;
   background-color: #FCF8ED;
-  border-radius: 8.3vw;
+  border-top-left-radius: 8.3vw;
+  border-bottom-left-radius: 8.3vw;
   border: black solid 1px;
-  position: absolute;
-  left: 48vw;
+  margin-left: auto;
 }
 @media (max-width: 750px) {
   .activity_item .activity_itemContent {
-    position: static;
-    margin-top: 45vw;
+    margin: 45vw auto 0;
+    border-top-right-radius: 8.3vw;
+    border-bottom-right-radius: 8.3vw;
     width: 100%;
   }
 }
 .activity_item .activity_itemContent .activity_itemText {
-  margin: 20px auto 50px;
-  width: 65%;
+  margin-top: 15%;
+  margin-bottom: 15%;
+  margin-right: 0;
+  margin-left: auto;
+  padding-right: 6%;
+  width: 75%;
 }
 @media (max-width: 750px) {
   .activity_item .activity_itemContent .activity_itemText {
-    margin-top: 50px;
+    margin: 50px auto;
+    padding-right: 0;
     width: 80%;
   }
 }
-.activity_item .activity_itemContent .activity_itemText .activity_itemTitle {
+.activity_item .activity_itemContent .activity_itemTitle {
   font-size: calc(0.1rem + 3.3vw);
   font-weight: 700;
   margin-bottom: 7%;
 }
 @media (max-width: 750px) {
-  .activity_item .activity_itemContent .activity_itemText .activity_itemTitle {
+  .activity_item .activity_itemContent .activity_itemTitle {
     font-size: calc(0.1rem + 5vw);
   }
 }
-.activity_item .activity_itemContent .activity_itemText .activity_itemDescription {
+.activity_item .activity_itemContent .activity_itemDescription {
   font-size: calc(0.1rem + 1.9vw);
 }
 @media (max-width: 750px) {
-  .activity_item .activity_itemContent .activity_itemText .activity_itemDescription {
+  .activity_item .activity_itemContent .activity_itemDescription {
     font-size: calc(0.1rem + 4.1vw);
   }
 }
 .activity_item .activity_itemContent__r {
-  right: 43vw;
-  left: auto;
+  border-top-right-radius: 8.3vw;
+  border-bottom-right-radius: 8.3vw;
+  border-top-left-radius: 0vw;
+  border-bottom-left-radius: 0vw;
+  margin-right: auto;
+  margin-left: 0;
+}
+@media (max-width: 750px) {
+  .activity_item .activity_itemContent__r {
+    border-top-left-radius: 8.3vw;
+    border-bottom-left-radius: 8.3vw;
+  }
+}
+.activity_item .activity_itemContent__r .activity_itemText__r {
+  width: 80%;
+  margin-top: 15%;
+  margin-bottom: 15%;
+  padding-left: 15%;
+  padding-right: 0;
+  margin-left: 0;
+  margin-right: 5%;
+}
+@media (max-width: 750px) {
+  .activity_item .activity_itemContent__r .activity_itemText__r {
+    margin: 50px auto;
+    padding: 0;
+  }
 }
 .activity_item .activity_itemImg__r {
-  margin-right: 0;
-  margin-left: auto;
+  right: 0;
 }
 
 .footer_copyRight {
@@ -459,6 +491,10 @@ h1, h2, h3, h4, h5, h6 {
 .skipLink__is-focused {
   transform: scale(1.1);
   left: 10px;
+}
+.skipLink__is-focused .skipLink_text:focus {
+  transform: scale(1.3);
+  transition: transform 1s;
 }
 
 .nav__sp .navSp_contact:focus {
