--- a/css-activityPage/activity.scss
+++ b/css-activityPage/activity.scss
@@ -65,7 +65,7 @@ h1, h2, h3, h4, h5, h6{
     transition: opacity 0.3s, transform 0.3s, visibility 0s 0.3s;
 
     @include media-tablet{
-        width: 520px;
+        width: 600px;
     }
     @include media-sp {
         width: auto;
@@ -353,6 +353,7 @@ h1, h2, h3, h4, h5, h6{
 }
 .activity_item{
     display: flex;
+    align-items: flex-start;
     position: relative;
     margin-bottom: 7%;
 
@@ -368,6 +369,8 @@ h1, h2, h3, h4, h5, h6{
         border-radius: 400px;
         background-color: #8b8f8f;
         border: black solid 0.2vw;
+        position: absolute;
+
         z-index: 10;
 
         @include media-sp{
@@ -394,54 +397,82 @@ h1, h2, h3, h4, h5, h6{
         }
     }
     .activity_itemContent{
-        width: 60%;
+        width: 51%;
         height: auto;
         background-color: #FCF8ED;
-        border-radius: 8.3vw;
+        border-top-left-radius: 8.3vw;
+        border-bottom-left-radius: 8.3vw;
         border: black solid 1px;
-        position: absolute;
-        left: 48vw;
+        margin-left: auto;
 
         @include media-sp{
-            position: static;
-            margin-top: 45vw;
+            margin: 45vw auto 0;
+            border-top-right-radius: 8.3vw;
+            border-bottom-right-radius: 8.3vw;
             width: 100%;
         }
 
         .activity_itemText{
-            margin:20px auto 50px;
-            width: 65%;
+            margin-top: 15%;
+            margin-bottom: 15%;
+            margin-right: 0;
+            margin-left: auto;
+            padding-right: 6%;
+            width: 75%;
 
             @include media-sp{
-                margin-top: 50px;
+                margin: 50px auto;
+                padding-right: 0;
                 width: 80%;
             }
+        }
+        .activity_itemTitle{
+            font-size: calc(0.1rem + 3.3vw);
+            font-weight: 700;
+            margin-bottom: 7%;
 
-            .activity_itemTitle{
-                font-size: calc(0.1rem + 3.3vw);
-                font-weight: 700;
-                margin-bottom: 7%;
-
-                @include media-sp{
-                    font-size: calc(0.1rem + 5vw);
-                }
+            @include media-sp{
+                font-size: calc(0.1rem + 5vw);
             }
-            .activity_itemDescription{
-                font-size: calc(0.1rem + 1.9vw);
+        }
+        .activity_itemDescription{
+            font-size: calc(0.1rem + 1.9vw);
 
-                @include media-sp{
-                    font-size: calc(0.1rem + 4.1vw);
-                }
+            @include media-sp{
+                font-size: calc(0.1rem + 4.1vw);
             }
         }
     }
     .activity_itemContent__r{
-        right: 43vw;
-        left: auto;
+        border-top-right-radius: 8.3vw;
+        border-bottom-right-radius: 8.3vw;
+        border-top-left-radius: 0vw;
+        border-bottom-left-radius: 0vw;
+        margin-right: auto;
+        margin-left: 0;
+
+        @include media-sp{
+            border-top-left-radius: 8.3vw;
+            border-bottom-left-radius: 8.3vw;
+        }
+
+        .activity_itemText__r{
+            width: 80%;
+            margin-top: 15%;
+            margin-bottom: 15%;
+            padding-left: 15%;
+            padding-right: 0;
+            margin-left: 0;
+            margin-right: 5%;
+
+            @include media-sp{
+                margin: 50px auto;
+                padding: 0;
+            }
+        }
     }
     .activity_itemImg__r{
-        margin-right: 0;
-        margin-left: auto;
+        right: 0;
     }
 }
 .footer_copyRight{
@@ -460,6 +491,11 @@ h1, h2, h3, h4, h5, h6{
 .skipLink__is-focused{
     transform: scale(1.1);
     left: 10px;
+
+    .skipLink_text:focus{
+        transform: scale(1.3);
+        transition: transform 1s;
+    }
 }
 .nav__sp{
     .navSp_contact:focus{
