--- a/css-topPage/style.original.css
+++ b/css-topPage/style.original.css
@@ -51,7 +51,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 @media (max-width: 1024px) {
   .l-header {
-    width: 520px;
+    width: 600px;
   }
 }
 @media (max-width: 750px) {
@@ -391,7 +391,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 80%;
   margin: 3% auto;
   padding-bottom: 3%;
-  border: red solid 7px;
+  border: black solid 7px;
   border-radius: 1.4vw;
 }
 @media (max-width: 750px) {
@@ -402,6 +402,7 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 .mainVisual_const .const_board .board_text {
+  display: block;
   font-size: calc(0.1rem + 5vw);
   font-weight: 700;
   text-align: center;
@@ -419,7 +420,7 @@ h1, h2, h3, h4, h5, h6 {
 .mainVisual_const .const_board .board_text__nameTop {
   font-size: calc(0.1rem + 20vw);
   letter-spacing: 10px;
-  color: red;
+  color: black;
   line-height: 1;
   font-weight: 700;
   text-align: center;
@@ -432,7 +433,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 .mainVisual_const .const_board .board_text__construction {
   font-size: calc(0.1rem + 9vw);
-  color: red;
+  color: black;
 }
 @media (max-width: 750px) {
   .mainVisual_const .const_board .board_text__construction {
@@ -440,7 +441,7 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 .mainVisual_const .const_board .board_text__top {
-  background-color: red;
+  background-color: black;
   color: white;
   padding: 10px auto;
 }
@@ -604,6 +605,7 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 400px;
   background-color: #8b8f8f;
   border: black solid 0.2vw;
+  position: absolute;
   z-index: 10;
 }
 @media (max-width: 750px) {
@@ -631,56 +633,86 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0 auto;
 }
 .activity_item .activity_itemContent {
-  width: 60%;
+  width: 51%;
   height: auto;
   background-color: #FCF8ED;
-  border-radius: 8.3vw;
+  border-top-left-radius: 8.3vw;
+  border-bottom-left-radius: 8.3vw;
   border: black solid 1px;
-  position: absolute;
-  left: 48vw;
+  margin-left: auto;
 }
 @media (max-width: 750px) {
   .activity_item .activity_itemContent {
-    position: static;
-    margin-top: 45vw;
+    margin: 45vw auto 0;
+    border-top-right-radius: 8.3vw;
+    border-bottom-right-radius: 8.3vw;
     width: 100%;
   }
 }
 .activity_item .activity_itemContent .activity_itemText {
-  margin: 20px auto 50px;
-  width: 65%;
+  margin-top: 15%;
+  margin-bottom: 15%;
+  margin-right: 0;
+  margin-left: auto;
+  padding-right: 6%;
+  width: 75%;
 }
 @media (max-width: 750px) {
   .activity_item .activity_itemContent .activity_itemText {
-    margin-top: 50px;
+    margin: 50px auto;
+    padding-right: 0;
     width: 80%;
   }
 }
-.activity_item .activity_itemContent .activity_itemText .activity_itemTitle {
+.activity_item .activity_itemContent .activity_itemTitle {
   font-size: calc(0.1rem + 3.3vw);
   font-weight: 700;
   margin-bottom: 7%;
 }
 @media (max-width: 750px) {
-  .activity_item .activity_itemContent .activity_itemText .activity_itemTitle {
+  .activity_item .activity_itemContent .activity_itemTitle {
     font-size: calc(0.1rem + 5vw);
   }
 }
-.activity_item .activity_itemContent .activity_itemText .activity_itemDescription {
+.activity_item .activity_itemContent .activity_itemDescription {
   font-size: calc(0.1rem + 1.9vw);
 }
 @media (max-width: 750px) {
-  .activity_item .activity_itemContent .activity_itemText .activity_itemDescription {
+  .activity_item .activity_itemContent .activity_itemDescription {
     font-size: calc(0.1rem + 4.1vw);
   }
 }
 .activity_item .activity_itemContent__r {
-  right: 43vw;
-  left: auto;
+  border-top-right-radius: 8.3vw;
+  border-bottom-right-radius: 8.3vw;
+  border-top-left-radius: 0vw;
+  border-bottom-left-radius: 0vw;
+  margin-right: auto;
+  margin-left: 0;
+}
+@media (max-width: 750px) {
+  .activity_item .activity_itemContent__r {
+    border-top-left-radius: 8.3vw;
+    border-bottom-left-radius: 8.3vw;
+  }
+}
+.activity_item .activity_itemContent__r .activity_itemText__r {
+  width: 80%;
+  margin-top: 15%;
+  margin-bottom: 15%;
+  padding-left: 15%;
+  padding-right: 0;
+  margin-left: 0;
+  margin-right: 5%;
+}
+@media (max-width: 750px) {
+  .activity_item .activity_itemContent__r .activity_itemText__r {
+    margin: 50px auto;
+    padding: 0;
+  }
 }
 .activity_item .activity_itemImg__r {
-  margin-right: 0;
-  margin-left: auto;
+  right: 0;
 }
 
 .intro_title {
@@ -982,7 +1014,7 @@ h1, h2, h3, h4, h5, h6 {
   left: 10px;
 }
 .skipLink__is-focused .skipLink_text:focus {
-  transform: scale(1.5);
+  transform: scale(1.3);
   transition: transform 1s;
 }
 
